# rules_platform

./: BUILD.bazel  MODULE.bazel  README  README.md  WORKSPACE
.bazelci/: presubmit.yml
.bcr/: config.yml  metadata.template.json  source.template.json
distro/: BUILD.bazel  README.md
platform_data/: BUILD.bazel  defs.bzl
platform_data/test/: BUILD  analysis_tests.bzl
