"""Bazel build and test dependencies."""

# NOTE: When editing this file, also update the lockfile.
#   bazel mod deps --lockfile_mode=update

module(
    name = "rules_platform",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Dev dependencies
bazel_dep(name = "rules_pkg", version = "0.10.0", dev_dependency = True)
